fix: Button label overflowing on 900+ px viewport

--- a/src/components/Sections/Shorten.module.css
+++ b/src/components/Sections/Shorten.module.css
@@ -53,5 +53,6 @@
 
   .shorten__btn {
     width: 20%;
+    min-width: fit-content;
   }
 }
